[gd_scene load_steps=22 format=2]

[ext_resource path="res://Sprites/cannon.png" type="Texture" id=1]
[ext_resource path="res://addons/kenney_particle_pack/smoke_07.png" type="Texture" id=2]
[ext_resource path="res://ObjectNodes/Cannon/Cannon.gd" type="Script" id=3]
[ext_resource path="res://addons/LineRenderer/LineRenderer.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/kenney_particle_pack/smoke_02.png" type="Texture" id=5]
[ext_resource path="res://materials/Black.tres" type="Material" id=6]
[ext_resource path="res://ObjectNodes/Cannon/CannonBall.tscn" type="PackedScene" id=7]
[ext_resource path="res://ObjectNodes/Cannon/WaterHitRing.png" type="Texture" id=8]

[sub_resource type="CubeMesh" id=13]
size = Vector3( 1, 0.2, 0.5 )

[sub_resource type="SpatialMaterial" id=1]
render_priority = 1
flags_transparent = true
flags_unshaded = true
flags_vertex_lighting = true
flags_no_depth_test = true
flags_do_not_receive_shadows = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 1, 1, 1, 0.392157 )
albedo_texture = ExtResource( 2 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.0404313, 0.726087, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0.0304779, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
min_value = 1.0
max_value = 150.0
_data = [ Vector2( 0, 117.322 ), 0.0, 0.0, 0, 0, Vector2( 0.209486, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 0.209091 ), 0.0, 0.975758, 0, 0, Vector2( 0.0197628, 0.490909 ), 1.56071, 1.61, 0, 0, Vector2( 0.980237, 0.945454 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
lifetime_randomness = 0.22
spread = 2.0
gravity = Vector3( 0, 1, -0.5 )
initial_velocity = 30.0
initial_velocity_random = 0.52
damping_random = 0.31
damping_curve = SubResource( 5 )
angle = 456.6
angle_random = 1.0
scale = 0.2
scale_random = 1.0
scale_curve = SubResource( 7 )
color_ramp = SubResource( 3 )

[sub_resource type="QuadMesh" id=9]
size = Vector2( 5, 5 )

[sub_resource type="SpatialMaterial" id=10]
render_priority = 1
flags_transparent = true
flags_unshaded = true
flags_do_not_receive_shadows = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 1, 1, 1, 0.392157 )
albedo_texture = ExtResource( 5 )

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=12]
lifetime_randomness = 0.22
spread = 10.0
gravity = Vector3( 0, 3, -2 )
initial_velocity = 5.0
initial_velocity_random = 0.83
damping_curve = SubResource( 5 )
angle = 263.7
angle_random = 1.0
scale = 0.05
scale_random = 1.0
scale_curve = SubResource( 11 )
color_ramp = SubResource( 3 )
hue_variation = 0.21
hue_variation_random = 0.33

[node name="Cannon" type="Spatial"]
script = ExtResource( 3 )
BallScene = ExtResource( 7 )

[node name="Gun (scaleable)" type="Spatial" parent="."]
transform = Transform( 0.656227, 0, 0, 0, 1, 0, 0, 0, 0.656227, 0, 0, 0 )

[node name="Sprite3D" type="Sprite3D" parent="Gun (scaleable)"]
transform = Transform( 0.349777, -0.201944, -2.18557e-08, 0, -1.76545e-08, 1, -0.201944, -0.349777, -3.78552e-08, 0.113681, 0.121206, -0.00625759 )
shaded = true
alpha_cut = 2
texture = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Gun (scaleable)"]
cast_shadow = 3
mesh = SubResource( 13 )
material/0 = ExtResource( 6 )

[node name="Particles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0211141, 0, 0.00772725 )
material_override = SubResource( 1 )
cast_shadow = 0
emitting = false
amount = 15
lifetime = 10.0
one_shot = true
explosiveness = 0.99
randomness = 0.5
visibility_aabb = AABB( -181.604, -196.936, -272.78, 362.306, 395.6, 547.224 )
local_coords = false
process_material = SubResource( 8 )
draw_pass_1 = SubResource( 9 )
__meta__ = {
"_editor_description_": ""
}

[node name="ParticlesFlash" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.641374, 0, 0.00772725 )
material_override = SubResource( 10 )
cast_shadow = 0
emitting = false
amount = 10
lifetime = 0.41
one_shot = true
explosiveness = 0.8
randomness = 0.46
visibility_aabb = AABB( -181.604, -196.936, -272.78, 362.306, 395.6, 547.224 )
local_coords = false
process_material = SubResource( 12 )
draw_pass_1 = SubResource( 9 )
__meta__ = {
"_editor_description_": ""
}

[node name="LineRenderer" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.404077, 0 )
visible = false
startThickness = 0.05
endThickness = 0.01
drawCaps = false
drawCorners = false
globalCoords = false

[node name="WaterHitMarker" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.014818, 0, -0.0247557 )
pixel_size = 0.005
axis = 1
shaded = true
alpha_cut = 2
texture = ExtResource( 8 )
